# autoresearch-cpu

./: .gitignore  README.md  analysis.ipynb  prepare.py  program.md  pyproject.toml  train.py
