[project]
name = "autoresearch-cpu"
version = "0.1.0"
description = "CPU adaptation of Karpathy's autoresearch — autonomous ML research on commodity hardware, no GPU required"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8,<4",
    "numpy>=2.2.6,<3",
    "pandas>=2.3.3,<3",
    "pyarrow>=21.0.0,<22",
    "requests>=2.32.0,<3",
    "rustbpe>=0.1.0,<1",
    "tiktoken>=0.11.0,<1",
    "torch>=2.9.0,<3",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
